--- a/Assessments.Frontend.Web/wwwroot/css/site.css
+++ b/Assessments.Frontend.Web/wwwroot/css/site.css
@@ -694,13 +694,42 @@ option {
        
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 409px) {
     .title_with_image img {
+        width: 100px;
         position:relative;
-        top:0;
+        top:auto;
+        float:right;
+        padding-bottom:0px;
     }
 
     .title_with_ingress {
-        width: 100%;
+        width: calc(100% - 100px);
+        width:100%;
+    }
+}
+
+
+
+@media only screen and (max-width: 750px) {
+
+    .side,
+    .content-placer,
+    .main-content {
+        padding-left: 0;
+        padding-right: 0;
+        width:100%;
+        margin:auto;
+    }
+
+    .mobile_padding,
+    .redlist li,
+    .controls,
+    .main .list-search,
+    .title_with_ingress,
+    .page-header {
+        padding-left: 15px;
+        padding-right: 15px;
+        bacground: pink;
     }
 }
